# network_mapping

./: .gitignore  CLAUDE.md  benchmark_dfs.py  building_match_vis.py  building_matching.py  cleaning_script.py  diagnose_dfs.py  pyproject.toml  run_pipeline.py  single_fid_mapping.py  substation_finder.py  temp_db_clean.py  test_pipeline.py  turn_csv_to_parquet.py
gridstock/: config.yaml  config_manager.py  creating_conn_new.py  dbcleaning.py  def collapse_switch_boxes.py  line_segementation_TEST.py  mapfuncs.py  network_loader.py  network_parsing.py  network_parsing_EEA.py  plotting.py  recorder.py  switches_import_test_script.py
results/: building_match_summary_schema.txt  building_matches_schema.txt  graph_sqlite_schema.txt  summary_schema.txt
temp/: net_size_vs_time_plot.py  ollys_building_map_script.py  substation_finder.py  summary_locations_plot.py
utils/: delete_existing_graph_sql_data.py
validation/: benchmark_dfs.py  diagnose_dfs.py  plot_network.py
