[tool.poetry]
name = "gridstock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.28.2"
geopandas = "^0.12.2"
shapely = "^2.0.1"
pandas = "^1.5.3"
numpy = ">=1.22,<1.24"
networkx = "^3.1"
osmnx = "^1.3.0"
scipy = "^1.10.1"
ipython = "^8.13.0"
matplotlib = ">=1.5,<3.7"
pandapower = "^2.12.1"
fiona = "^1.9.4"
pyproj = "^3.5.0"
pygeos = "^0.14"
apsw = "^3.42.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.4"
pdoc = "^13.0.0"
ipykernel = "^6.23.1"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
